feat: new repeatPassword field in reset password endpoint
