# controllers/documentation/swagger.json
@@ -1154,9 +1154,13 @@
                 "password": {
                   "example": "Haslo123!",
                   "type": "string"
+                },
+                "repeatPassword": {
+                  "example": "Haslo123!",
+                  "type": "string"
                 }
               },
-              "required": ["token", "password"]
+              "required": ["token", "password", "repeatPassword"]
             }
           }
         ],
